updating layout, removing test pages

--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -11,7 +11,9 @@ layout: "standard"
   </blockquote>
 </section>
 
+<section class="mw8 center">
 <%= image_tag 'place/tractor.jpg', :class => 'w-100' %>
+</section>
 
 <section class="mb4 mv5-ns mw8 center ph4">
   <div class="center measure">
@@ -60,7 +62,9 @@ layout: "standard"
 </section>
 
 
+<section class="mw8 center">
 <%= image_tag 'place/winery.jpg', :class => 'w-100' %>
+</section>
 
 <section class="mv4 mv5-ns mw8 center ph4">
    <div class="center measure">
@@ -73,7 +77,9 @@ layout: "standard"
    </div>
 </section>
 
+<section class="mw8 center">
 <%= image_tag 'place/potato-hill-pano.jpg', :class => 'w-100' %>
+</section>
 
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="center measure">
@@ -88,4 +94,6 @@ layout: "standard"
   </div>
 </section>
 
+<section class="mw8 center">
 <%= image_tag 'place/coyote.jpg', :class => 'w-100' %>
+</section>
