--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -20,7 +20,9 @@ layout: "standard"
 <!-- <p class="lh-copy measure center">Both of our wines are produced in the same classic way we've done it since 1979.</p> -->
 </section>
 
+<section class="mw8 center">
 <%= image_tag 'wine/vineyard.jpg', :class => 'w-100' %>
+</section>
 
 <section class="mv4 mv5-ns ph4">
 	<div class="mw8 center cf mb3 mb4-ns">
@@ -39,7 +41,9 @@ layout: "standard"
 			<p class="tc"><%= link_to  'Tasting Notes', 'tasting-notes.html', :class => 'dunn-link link txt-link' %></p>
 </section>
 
+<section class="mw8 center">
    <img src="/images/wine/89-howell.jpg" class="w-100">
+</section>
 
    <section class="mv4 mv5-ns ph4">
      <div class="mw8 center cf mb4">
@@ -55,6 +59,8 @@ layout: "standard"
      <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link txt-link' %>.</p>
    </section>
 
+<section class="mw8 center">
    <img src="/images/wine/caves.jpg" class="w-100">
+</section>
 
 
