got rid of rootstock question

--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -53,7 +53,7 @@ layout: "standard"
 
       <div class="fl w-100 w-50-l ph4-l">
         <h3 class="normal mt0 tc">Frank Vineyard</h3>
-        <p class="lh-copy measure center">Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and we re-planted the two blocks in 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
+        <p class="lh-copy measure center">Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and we re-planted the two blocks in 1989 and 1993.</p>
         <h3 class="normal mt4 mt5-l tc">Park Muscatine Vineyard</h3>
         <p class="lh-copy measure center ">This vineyard was purchased in 1991. It's comprised of 5 distinct blocks. The first block “Cuervo” was replanted in 1991. “JK” was replanted in 1993, and 5 years later so was the “Below House” block. The tiny little “Creek” block will need some attention soon as this acre plot produces less than a ton of fruit. The “Old Petite” block was the source of Mike and Kara’s <%= link_to  'Retro Cellars', 'http://www.retrocellars.com', :target => "_blank", :class => 'dunn-link link txt-link' %> project. The block was replanted to Cabernet in 2016 and has been renamed “Coyote”.</p>
       </div>
