--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -8,12 +8,12 @@ hero: "contact/hero.jpg"
 	<div class="mw8 center cf mb4 mb5-l">
 		<div class="fl w-100 w-50-l ph4-l">
       <h2 class="normal mt0 tc tl-l">Visiting</h2>
-      <p class="lh-copy measure center">Dunn Vineyards is a small working farm. We enjoy having people up to see what’s going on, but we are frequently busy tending to the vines, making wine or fixing equipment. The winery is also the home of Randy and Lori and after a week of work we love the peace and quiet of living in the woods. This means that we do not host anyone on the weekend. Please feel free to email <%= mail_to 'ben@dunnvineyards.com', "Ben", :class => "dunn-link link txt-link" %> and if we are available, during the week we’d be more than happy to show you around.</p>
+      <p class="lh-copy measure center">Dunn Vineyards isn’t your typical Napa winery -- it’s a small, working farm and family home.  While we love to have folks up and show them around, there’s limited availability. We don’t host guests on the weekends so Randy and Lori can relax after a week of work. We prefer to find a time during the week when we’re not tending to the vines, making wine, or fixing equipment. Send <%= mail_to 'ben@dunnvineyards.com', "Ben", :class => "dunn-link link txt-link" %> an email and he’ll try to work something out.</p>
       <p class="lh-copy measure center">Email Ben: <%= mail_to 'ben@dunnvineyards.com', "ben@dunnvineyards.com",:class => "dunn-link link txt-link" %>.</p>
     </div>
 		<div class="fl w-100 w-50-l ph4-l mt4 mt0-l">
       <h2 class="normal mt0 tc tl-l">Allocation</h2>
-      <p class="lh-copy measure center">Our wine is sold direct to our loyal customers via our annual newsletter.  While the Dunn wines have historically proven to be age worthy and are highly sought after by fans and collectors alike. We do re-release wines from time to time to our mailing list customers. If you have not purchased our wine from us directly and are interested in becoming a part of our annual newsletter, please email <%= mail_to 'info@dunnvineyards.com', "Erin",:class => "dunn-link link txt-link" %> for information.</p>
+      <p class="lh-copy measure center">Our wine is sold direct to our loyal customers via our annual newsletter. If you have not purchased our wine from us directly and are interested in becoming a part of our annual newsletter, please email <%= mail_to 'info@dunnvineyards.com', "Erin",:class => "dunn-link link txt-link" %> for information.</p>
       <p class="lh-copy measure center">Email Erin: <%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com",:class => "dunn-link link txt-link" %></p>
     </div>
   </div>
