--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -143,7 +143,7 @@ layout: "standard"
 		<!-- COL 1 -->
 		<div class="fl w-100 w-50-ns ph3-m ph4-l">
 			<h3 class="normal mt0 mb0">Erin Begerow</h3>
-			<p class="lh-copy measure mt2">Office manager. She is a native Californian and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the Waves Aquatics swim team.</p>
+      <p class="lh-copy measure mt2">Erin has been running the office since October 1994. She’s a native She is a native Californian, and a graduate of Pomona College. Always close by, Erin and her husband live just down the road from the winery. With their two children off at college, Erin has more time to devote to coaching the Waves Aquatics swim team.</p>
 			<h3 class="normal mt4 mb0">Raul Martinez</h3>
 			<p class="lh-copy measure mt2">Vineyard manager Raul Martinez was the first employee. He came on in 1987 to help Randy in the vineyards and he is still running the vineyard today.</p>
         <h3 class="normal mt4 mb0">Adan Salgado</h3>
