--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -23,7 +23,7 @@ layout: "standard"
 			<cite class="f6 f5-l tr db">(on why he decided to farm on Howell Mountain)</cite>
 	</blockquote>
     <h2 class="normal mt4 mt5-ns  mb0">The Mountain</h2>
-    <p class="lh-copy">Bill Smith led a group of 5 winemakers and grape growers to define what today is the Howell Mountain AVA. The AVA’s boundary starts at an elevation of 1400’ so even when it is cool and foggy on the valley floor, it is sunny and breezy up on the mountain. Randy was one of those pioneers and our wine epitomizes what has become synonymous with Howell Mountain Cabernet; deep concentration, bold, massive, ultra rich and elegant.</p>
+    <p class="lh-copy">Led by Bill Smith, Randy and a few other winemakers and grape growers proposed and defined the distinctive Howell Mountain AVA. The AVA’s boundary starts at an elevation of 1400’ so even when it is cool and foggy on the valley floor, it is sunny and breezy up on the mountain. Our wine epitomizes the Howell Mountain Cabernet: deep concentration, bold, massive, ultra rich and elegant.</p> 
 
 		<blockquote class="mv4 mv5-ns  measure-narrow center">
 		<p class="lh-copy i mb0">Howell Mountain grapes need thick skins to survive and thick skins provide deep flavors and chewy tannins.</p>
@@ -48,14 +48,15 @@ layout: "standard"
         <p class="lh-copy i mt0 tc">Formerly the "Trailer Vineyard"</p>
         <p class="lh-copy measure center">This was the original vineyard purchased in 1978 by Randy and Lori. After the 2013 vintage we tore out the old vineyard, and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra".</p>
         <h3 class="normal mt4 mt5-l tc">Lake Vineyard</h3>
-        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy and Mike grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west border of the vineyard. Mike named this Los Abuelos and uses it for his <%= link_to  'Retro Cellars', 'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label. The Cabernet was planted in 3 blocks in 2000, 2001 and 2003. This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers along with a wind machine for frost protection.</p>
+        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. For the first 20 years, we grew hay here to feed our horses. The 8 acres primarily consists of cabernet sauvignon planted in three blocks (2000, 2001, and 2003). You’ll also find a few rows of Syrah (for home consumption).  And on the western border is an acre Mike calls “Los Abuelos” where he grows Petite Sirah and Peloursin for his <%= link_to  'Retro Cellars',  'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label.  Because it sits in a small valley, this vineyard is the coolest and requires overhead sprinklers along with a wind machine for frost protection.</p>
+        
       </div>
 
       <div class="fl w-100 w-50-l ph4-l">
         <h3 class="normal mt0 tc">Frank Vineyard</h3>
-        <p class="lh-copy measure center">Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and we re-planted the two blocks in 1989 and 1993.</p>
+        <p class="lh-copy measure center">In 1979, Henry Frank entrusted Randy with managing this vineyard and we’ve been taking care of it ever since.  Though we don’t own it, it feels very much like part of our land.  Originally planted in 1965, we re-planted the two blocks in 1989 and 1993.</p>
         <h3 class="normal mt4 mt5-l tc">Park Muscatine Vineyard</h3>
-        <p class="lh-copy measure center ">This vineyard was purchased in 1991. It's comprised of 5 distinct blocks. The first block “Cuervo” was replanted in 1991. “JK” was replanted in 1993, and 5 years later so was the “Below House” block. The tiny little “Creek” block will need some attention soon as this acre plot produces less than a ton of fruit. The “Old Petite” block was the source of Mike and Kara’s <%= link_to  'Retro Cellars', 'http://www.retrocellars.com', :target => "_blank", :class => 'dunn-link link txt-link' %> project. The block was replanted to Cabernet in 2016 and has been renamed “Coyote”.</p>
+        <p class="lh-copy measure center ">We purchased this vineyard in 1991. It is comprised of 5 distinct blocks. We immediately replanted "Cuervo",  followed by "JK" (1993) and "Below House" (1998).  "Coyote" is the former home of the "Old Petite" block Mike and Kara grew for <%= link_to  'Retro Cellars', 'http://www.retrocellars.com', :target => "_blank", :class =>   'dunn-link link txt-link' %>, but we replanted Cabernet there in 2016. Production from the little “Creek” block is starting to slow, so we'll be replanting that acre soon.</p>
       </div>
 
     </div>
