--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -29,12 +29,12 @@ layout: "standard"
     <div class="fl w-100 w-50-l ph4-l">
 			<h2 class="normal mv0 tc">Howell Mountain Cabernet</h2>
       <!--  <p class="i mt0">Napa Valley: Howell Mountain AVA</p> -->
-      <p class="lh-copy measure center" >The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. One of the signatures of the Howell Mountain wine is that the bottle is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link txt-link' %>.</p>
+      <p class="lh-copy measure center" >Our signature wine contains only fruit farmed by us here in our vineyards on Howell Mountain. The wine comes in a distinctive bottle that is hand dipped in <%= link_to  'red wax', 'how-to-remove-the-wax.html', :class => 'dunn-link link txt-link' %>.</p>
 					</div>
 
 		<div class="fl w-100 w-50-l ph4-l">
 			<h2 class="normal mb0 mt3 mt4-ns mt0-l tc">Napa Valley Cabernet</h2>
-			<p class="lh-copy measure center">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
+			<p class="lh-copy measure center">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of valley floor fruit that we purchase. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
 		</div>
     </div>
       <p class="lh-copy measure-narrow center tc">Both of our wines are 100% Cabernet Sauvignon aged 32 months in 100% new French oak.</p>
@@ -53,7 +53,7 @@ layout: "standard"
        </div>
        <div class="fl w-100 w-50-l ph4-l">
          <h2 class="normal mb0 mt3 mt4-ns mt0-l tc">Library Wines</h2>
-         <p class="lh-copy measure center mb0">We are committed to maintaining a library of all the vintages we have produced. Though not available for sale, we sometimes release older vintages to our mailing list.</p>
+         <p class="lh-copy measure center mb0">We are committed to maintaining a library of all the vintages we have produced. Occasionally we re-release older vintages to our mailing list.</p>
        </div>
      </div>
      <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link txt-link' %>.</p>
