--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -46,9 +46,9 @@ layout: "standard"
       <div class="fl w-100 w-50-l ph4-l">
         <h3 class="normal mt0 mb0 tc">Alta Tierra Vineyard</h3>
         <p class="lh-copy i mt0 tc">Formerly the "Trailer Vineyard"</p>
-        <p class="lh-copy measure center">This was the original vineyard purchased in 1978 by Randy and Lori. After the 2013 vintage we tore out the old vineyard, and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra".</p>
+        <p class="lh-copy measure center">This was the original vineyard purchased in 1978 by Randy and Lori. After the 2013 vintage, we tore out the old vineyard and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra".</p>
         <h3 class="normal mt4 mt5-l tc">Lake Vineyard</h3>
-        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. For the first 20 years, we grew hay here to feed our horses. The 8 acres primarily consists of cabernet sauvignon planted in three blocks (2000, 2001, and 2003). You’ll also find a few rows of Syrah (for home consumption).  And on the western border is an acre Mike calls “Los Abuelos” where he grows Petite Sirah and Peloursin for his <%= link_to  'Retro Cellars',  'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label.  Because it sits in a small valley, this vineyard is the coolest and requires overhead sprinklers along with a wind machine for frost protection.</p>
+        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. For the first 20 years, we grew hay here to feed our horses. The 8 acres primarily consists of Cabernet Sauvignon planted in three blocks (2000, 2001, and 2003). You’ll also find a few rows of Syrah (for home consumption).  And on the western border is an acre Mike calls “Los Abuelos” where he grows Petite Sirah and Peloursin for his <%= link_to  'Retro Cellars',  'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label.  Because it sits in a small valley, this vineyard is the coolest and requires overhead sprinklers along with a wind machine for frost protection.</p>
         
       </div>
 
@@ -85,12 +85,12 @@ layout: "standard"
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="center measure">
     <h2 class="normal mb0">Open Space</h2>
-    <p class="lh-copy">Conservation is a priority today. Randy and Lori’s first involvement was in 2004. They gifted the development rights for their Sentinel Hill property, to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dunn-link txt-link' %>. The property is 64 acres of forested hillside overlooking the town of Angwin, up on Howell Mountain. Second was the Dunn’s gift of $5 million, the largest donation in the history of the Land Trust to help purchase the Wildlake Ranch a 3000 acre property up on the mountain.</p>
+    <p class="lh-copy">Conservation is a priority today. Randy and Lori’s first involvement was in 2004. They gifted the development rights for their Sentinel Hill property, to the <%= link_to "Napa Land Trust", "https://www.napalandtrust.org/", target: :_blank, :class => 'link dunn-link txt-link' %>. The property is 64 acres of forested hillside overlooking the town of Angwin, up on Howell Mountain. The second was the Dunn’s gift of $5 million, the largest donation in the history of the Land Trust to help purchase the Wildlake Ranch a 3000-acre property up on the mountain.</p>
 
-<p class="lh-copy">There is a sense of urgency in the Napa Valley to preserve the natural landscape. The influx of big money coming into the area puts tremendous pressure on the wild lands above the valley floor, there is constant tension between preservation and projects to clear land and plant vineyards. 
+<p class="lh-copy">There is a sense of urgency in the Napa Valley to preserve the natural landscape. The influx of big money coming into the area puts tremendous pressure on the wild lands above the valley floor, there is a constant tension between preservation and projects to clear land and plant vineyards. 
 </p>
 
-<p class="lh-copy i measure-narrow center tc">In life we have to decide what will define us and what we will leave behind for the next generation.</p>
+<p class="lh-copy i measure-narrow center tc">In life, we have to decide what will define us and what we will leave behind for the next generation.</p>
 
   </div>
 </section>
