--- a/source/story.html.erb
+++ b/source/story.html.erb
@@ -7,7 +7,7 @@ hero: "story/harvest.jpg"
 <section class="mt0 mb4 mb5-ns mw8 center ph4">
   <div class="measure lh-copy center">
     <h2 class="normal">Getting Started</h2>
-    <p>In 1978 Randy and Lori purchased a 14-acre parcel in Angwin. The land had just about 5 acres of Cabernet vines planted on it. Working full time as a winemaker in Rutherford, he, Lori and Mike tended to the vines in the evening and on the weekend. The neighboring vineyard was being neglected and Randy agreed to farm it and buy the fruit starting in 1979. This property was owned by Harry Frank who did not live locally. That first harvest yielded 9 tons of fruit from these two vineyards. Randy purchased an additional 3 tons from the Beatty Ranch and Dunn Vineyards was underway.</p>
+    <p>In 1978 Randy and Lori purchased a 14-acre parcel in Angwin with about 5 acres of Cabernet vines on it. At the time, Randy was working full-time as a winemaker in Rutherford. In the evenings and on weekends, Randy, Lori, and a young Mike tended the vines. The same year, Randy agreed to farm and buy the fruit from Harry Frank's adjoining property. That first harvest yielded 9 tons of fruit from these two vineyards. Randy purchased an additional 3 tons from the Beatty Ranch and Dunn Vineyards was underway.</p>
   </div>
 </section>
 
@@ -26,7 +26,7 @@ hero: "story/harvest.jpg"
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
     <h2 class="normal mt5-ns mb0">Making it Official</h2>
-    <p>Everything picked up speed after that. Randy, Lori, Mike and baby Jennifer moved onto the property that today is the winery. It was officially bonded as a winery in 1981. The ATF approved Howell Mountain as a sub AVA of the Napa Valley and it became official in January of 1984. The family had grown and Lori was raising 2 young daughters and a teenage son, while Randy was still busy at work down Valley. All work for the family business was still relegated to evenings and weekends. In '85 Lori finally had her new house and Randy left his job.</p> 
+    <p>Everything picked up speed after that. Randy, Lori, Mike and baby Jennifer moved onto the property that today is the winery. In 1981, the winery was officially bonded. By 1984 the ATF approved Howell Mountain as a sub-AVA of the Napa Valley. Kristina was born and Lori was now running after 2 young daughters and a teenage son. Randy was still working down in the valley so the family business was still relegated to evenings and weekends. But things were going well. By 1985 they moved into the new family house (the "Brown House") and Randy left his job in the valley.</p> 
   </div>
 </section>
 
@@ -68,7 +68,7 @@ hero: "story/harvest.jpg"
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
     <h2 class="normal mb0">Full Speed Ahead</h2>
-    <p>By the end of the '80's Dunn Vineyards had become a successful operation. Randy was consulting for other wineries and selling out all of his wine. In 1989 he had run out of room to store barrels and he tunneled into the mountain to make more space. </p> 
+    <p>By the end of the '80's Dunn Vineyards had become a successful operation. Randy was consulting for other wineries and selling out all of his wine. In 1989 he had run out of room to store barrels and he tunneled into the mountain to make more space. Now they had room for more barrels and a place for Jenny and Kristina to rollerskate.</p> 
   </div>
 </section>
 
@@ -101,7 +101,7 @@ hero: "story/harvest.jpg"
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
     <h2 class="normal mb0">The Kids Get Back Involved</h2>
-    <p>Mike came back to help out part time in 1999. As the cellar grunt it was a good three years before the winery was his full time job. Kristina graduated from Cal Poly with a degree in wine making and viticulture and by 2005 they were both taking direction from Randy. </p> 
+    <p>In 1999, Mike came back to help out part-time. It took about three years, but the "cellar grunt" came on full-time. Kristina graduated from Cal Poly with a degree in winemaking and viticulture and came onboard. By 2005, both kids were working full-time for Randy. Dunn Vineyards had always been a family business, but this was a whole new level.</p> 
   </div>
 </section>
 
@@ -153,8 +153,7 @@ hero: "story/harvest.jpg"
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
     <h2 class="normal mb0">Above the Fog</h2>
-    <p>There are some distinct benefits to being above 1400 feet in elevation. We tend to see more sunshine each day and the heat tends to be more moderate. 
-    Spring starts later for us as the weather is much cooler up here in Spring and Winter. We frequently have frost pressures around the time of bud break, which can carry through into flowering. In 2008 for example, four consecutive days in April brought 19 degree temperatures and we never saw about half of our crop. Our yields average about 2 tons an acre (which is really low) but the cool, wet vintages do not have the same negative effects that come with being on the valley floor. </p> 
+  <p>There are some distinct benefits to being above 1400 feet in elevation. We tend to see more sunshine each day and the heat tends to be more moderate. But spring starts later for us and, like winter, tends to be cooler here than on the valley floor. Frost is a concern from bud break through flowering. In 2008, four days of 19-degree temperatures devastated half our crop. Our yields average about 2 tons an acre (which is really low) but the cool, wet vintages do not have the same negative effects that come with being on the valley floor.</p>
   </div>
 </section>
 
@@ -178,7 +177,7 @@ hero: "story/harvest.jpg"
 <section class="mv4 mv5-ns mw8 center ph4">
   <div class="measure lh-copy center">
     <h2 class="normal mb0">Today</h2>
-    <p>We farm about 35 acres of Cabernet Sauvignon on the property. This is a manageable size for us to remain in the drivers seat for all farming and wine making operations.</p>
+    <p>We farm about 35 acres of Cabernet Sauvignon on the property. This is a manageable size for us to remain in the driver's seat for all farming and winemaking operations.</p>
   </div>
 </section>
 
