--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -30,6 +30,15 @@
 				-webkit-font-smoothing: antialiased;
 			}
 		</style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108707997-1"></script>
+    <script>
+  window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+        gtag('config', 'UA-108707997-1');
+    </script>
 	</head>
 
   <body class="<%= page_classes %> athelas black-70 f5 f4-l">
