removed periods next to email addresses

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -9,7 +9,7 @@ hero: "contact/hero.jpg"
 		<div class="fl w-100 w-50-l ph4-l">
       <h2 class="normal mt0 tc tl-l">Visiting</h2>
       <p class="lh-copy measure center">Dunn Vineyards isn’t your typical Napa winery -- it’s a small, working farm and family home.  While we love to have folks up and show them around, there’s limited availability. We don’t host guests on the weekends so Randy and Lori can relax after a week of work. We prefer to find a time during the week when we’re not tending to the vines, making wine, or fixing equipment. Send <%= mail_to 'ben@dunnvineyards.com', "Ben", :class => "dunn-link link txt-link" %> an email and he’ll try to work something out.</p>
-      <p class="lh-copy measure center">Email Ben: <%= mail_to 'ben@dunnvineyards.com', "ben@dunnvineyards.com",:class => "dunn-link link txt-link" %>.</p>
+      <p class="lh-copy measure center">Email Ben: <%= mail_to 'ben@dunnvineyards.com', "ben@dunnvineyards.com",:class => "dunn-link link txt-link" %></p>
     </div>
 		<div class="fl w-100 w-50-l ph4-l mt4 mt0-l">
       <h2 class="normal mt0 tc tl-l">Allocation</h2>
