--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -56,7 +56,7 @@ layout: "standard"
          <p class="lh-copy measure center mb0">We are committed to maintaining a library of all the vintages we have produced. Occasionally we re-release older vintages to our mailing list.</p>
        </div>
      </div>
-     <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link txt-link' %>.</p>
+     <p class="lh-copy measure-narrow center tc">To join the mailing list, please email Erin:<br><%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com", :class => 'dunn-link link txt-link' %></p>
    </section>
 
 <section class="mw8 center">
