--- a/source/tasting-notes.html.erb
+++ b/source/tasting-notes.html.erb
@@ -33,10 +33,10 @@ layout: "standard"
 
 var showRecent = function(){
 	$("div.2015").show();
-	$("div.2013").show();
+	$("div.2014").show();
 	$("div.2013").show();
 	$("div.2012").show();
-	console.log('shown recent ...');
+	//console.log('shown recent ...');
 }
 
 var hideAll = function(){
