adding eagle summit vineyard

--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -47,14 +47,15 @@ layout: "standard"
         <h3 class="normal mt0 mb0 tc">Alta Tierra Vineyard</h3>
         <p class="lh-copy i mt0 tc">Formerly the "Trailer Vineyard"</p>
         <p class="lh-copy measure center">This was the original vineyard purchased in 1978 by Randy and Lori. After the 2013 vintage, we tore out the old vineyard and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra".</p>
-        <h3 class="normal mt4 mt5-l tc">Lake Vineyard</h3>
-        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. For the first 20 years, we grew hay here to feed our horses. The 8 acres primarily consists of Cabernet Sauvignon planted in three blocks (2000, 2001, and 2003). You’ll also find a few rows of Syrah (for home consumption).  And on the western border is an acre Mike calls “Los Abuelos” where he grows Petite Sirah and Peloursin for his <%= link_to  'Retro Cellars',  'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label.  Because it sits in a small valley, this vineyard is the coolest and requires overhead sprinklers along with a wind machine for frost protection.</p>
-        
+        <h3 class="normal mt4 mt5-l tc">Frank Vineyard</h3>
+        <p class="lh-copy measure center">In 1979, Henry Frank entrusted Randy with managing this vineyard and we’ve been taking care of it ever since.  Though we don’t own it, it feels very much like part of our land.  Originally planted in 1965, we re-planted the two blocks in 1989 and 1993.</p>
+        <h3 class="normal mt4 mt5-l tc">Eagle Summit Vineyard</h3>
+        <p class="lh-copy measure center">We purchased this property in the Spring of 2018. It was planted in 2000, by <% link_to 'Josh Clark',  'http://www.clarkvineyardmanagement.com', :target => "_blank", :class => 'dunn-link link txt-link' %> to Cabernet Sauvignon with two different rootstock and clonal selections. Situated at an elevation of 2100 feet it rests right in between our Alta Tierra and Frank vineyards.  </p>
       </div>
 
       <div class="fl w-100 w-50-l ph4-l">
-        <h3 class="normal mt0 tc">Frank Vineyard</h3>
-        <p class="lh-copy measure center">In 1979, Henry Frank entrusted Randy with managing this vineyard and we’ve been taking care of it ever since.  Though we don’t own it, it feels very much like part of our land.  Originally planted in 1965, we re-planted the two blocks in 1989 and 1993.</p>
+        <h3 class="normal mt0 mb0 tc">Lake Vineyard</h3>
+        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. For the first 20 years, we grew hay here to feed our horses. The 8 acres primarily consists of Cabernet Sauvignon planted in three blocks (2000, 2001, and 2003). You’ll also find a few rows of Syrah (for home consumption).  And on the western border is an acre Mike calls “Los Abuelos” where he grows Petite Sirah and Peloursin for his <%= link_to  'Retro Cellars',  'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label.  Because it sits in a small valley, this vineyard is the coolest and requires overhead sprinklers along with a wind machine for frost protection.</p>
         <h3 class="normal mt4 mt5-l tc">Park Muscatine Vineyard</h3>
         <p class="lh-copy measure center ">We purchased this vineyard in 1991. It is comprised of 5 distinct blocks. We immediately replanted "Cuervo",  followed by "JK" (1993) and "Below House" (1998).  "Coyote" is the former home of the "Old Petite" block Mike and Kara grew for <%= link_to  'Retro Cellars', 'http://www.retrocellars.com', :target => "_blank", :class =>   'dunn-link link txt-link' %>, but we replanted Cabernet there in 2016. Production from the little “Creek” block is starting to slow, so we'll be replanting that acre soon.</p>
       </div>
