--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -50,7 +50,7 @@ layout: "standard"
         <h3 class="normal mt4 mt5-l tc">Frank Vineyard</h3>
         <p class="lh-copy measure center">In 1979, Henry Frank entrusted Randy with managing this vineyard and we’ve been taking care of it ever since.  Though we don’t own it, it feels very much like part of our land.  Originally planted in 1965, we re-planted the two blocks in 1989 and 1993.</p>
         <h3 class="normal mt4 mt5-l tc">Eagle Summit Vineyard</h3>
-        <p class="lh-copy measure center">We purchased this property in the Spring of 2018. It was planted in 2000, by <% link_to 'Josh Clark',  'http://www.clarkvineyardmanagement.com', :target => "_blank", :class => 'dunn-link link txt-link' %> to Cabernet Sauvignon with two different rootstock and clonal selections. Situated at an elevation of 2100 feet it rests right in between our Alta Tierra and Frank vineyards.  </p>
+        <p class="lh-copy measure center">We purchased this property in the Spring of 2018. It was planted in 2000, by <%= link_to 'Josh Clark',  'http://www.clarkvineyardmanagement.com', :target => "_blank", :class => 'dunn-link link txt-link' %> to Cabernet Sauvignon with two different rootstock and clonal selections. Situated at an elevation of 2100 feet it rests right in between our Alta Tierra and Frank vineyards.  </p>
       </div>
 
       <div class="fl w-100 w-50-l ph4-l">
