--- a/source/place.html.erb
+++ b/source/place.html.erb
@@ -6,7 +6,7 @@ layout: "standard"
 
 <section class="mt0 mb4 mb5-ns mw8 center ph4">
   <blockquote class="mb4 measure-narrow center">
-  <p class="lh-copy i mb0">We farm 35 acres of Cabernet Sauvignon on Howell Mountain. Since 1979 we’ve done our best to care for these vines so that they produce a wine that tastes like Cabernet Sauvignon from Howell Mountain. Today we are hands-on in the vineyard, on the crush pad, and in the cellar. Any more land and we would need to spend more time administering and managing. We’d prefer to farm.</p>
+  <p class="lh-copy i mb0">We farm 42 acres of Cabernet Sauvignon on Howell Mountain. Since 1979 we’ve done our best to care for these vines so that they produce a wine that tastes like Cabernet Sauvignon from Howell Mountain. Today we are hands-on in the vineyard, on the crush pad, and in the cellar. Any more land and we would need to spend more time administering and managing. We’d prefer to farm.</p>
     <cite class="f6 f5-l ttu tracked tr db measure"> &mdash; Randy Dunn</cite>
   </blockquote>
 </section>
@@ -48,14 +48,14 @@ layout: "standard"
         <p class="lh-copy i mt0 tc">Formerly the "Trailer Vineyard"</p>
         <p class="lh-copy measure center">This was the original vineyard purchased in 1978 by Randy and Lori. After the 2013 vintage, we tore out the old vineyard and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra".</p>
         <h3 class="normal mt4 mt5-l tc">Frank Vineyard</h3>
-        <p class="lh-copy measure center">In 1979, Henry Frank entrusted Randy with managing this vineyard and we’ve been taking care of it ever since.  Though we don’t own it, it feels very much like part of our land.  Originally planted in 1965, we re-planted the two blocks in 1989 and 1993.</p>
+        <p class="lh-copy measure center">In 1979, Henry Frank entrusted Randy with managing this vineyard and we’ve been taking care of it ever since.  Though we don’t own it, it feels very much like part of our land.  Originally planted in 1965, we replanted the first block in 1989 and the second in 1993. It was time to replant the first block again in 2018.</p>
         <h3 class="normal mt4 mt5-l tc">Eagle Summit Vineyard</h3>
         <p class="lh-copy measure center">We purchased this property in the Spring of 2018. It was planted to Cabernet Sauvignon in 2000 by <%= link_to 'Josh Clark',  'http://www.clarkvineyardmanagement.com', :target => "_blank", :class =>  'dunn-link link txt-link' %>, who used two different rootstock and clonal selections. Situated at an elevation of 2100 feet it rests right in between our Alta Tierra and Frank vineyards.</p>
       </div>
 
       <div class="fl w-100 w-50-l ph4-l">
         <h3 class="normal mt0 mb0 tc">Lake Vineyard</h3>
-        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. For the first 20 years, we grew hay here to feed our horses. The 8 acres primarily consists of Cabernet Sauvignon planted in three blocks (2000, 2001, and 2003). You’ll also find a few rows of Syrah (for home consumption).  And on the western border is an acre Mike calls “Los Abuelos” where he grows Petite Sirah and Peloursin for his <%= link_to  'Retro Cellars',  'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label.  Because it sits in a small valley, this vineyard is the coolest and requires overhead sprinklers along with a wind machine for frost protection.</p>
+        <p class="lh-copy measure center ">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. For the first 20 years, we grew hay here to feed our horses. The 8 acres primarily consists of Cabernet Sauvignon planted in three blocks (2001, 2002, and 2003). You’ll also find a few rows of Syrah (for home consumption).  And on the western border is an acre Mike calls “Los Abuelos” where he grows Petite Sirah and Peloursin, which he planted in 2005, for his <%= link_to  'Retro Cellars',  'http://www.retrocellars. com', :target => "_blank", :class => 'dunn-link link txt-link' %> label.  Because it sits in a small valley, this vineyard is the coolest and requires overhead sprinklers along with a wind machine for frost protection.</p>
         <h3 class="normal mt4 mt5-l tc">Park Muscatine Vineyard</h3>
         <p class="lh-copy measure center ">We purchased this vineyard in 1991. It is comprised of 5 distinct blocks. We immediately replanted "Cuervo",  followed by "JK" (1993) and "Below House" (1998).  "Coyote" is the former home of the "Old Petite" block Mike and Kara grew for <%= link_to  'Retro Cellars', 'http://www.retrocellars.com', :target => "_blank", :class =>   'dunn-link link txt-link' %>, but we replanted Cabernet there in 2016. Production from the little “Creek” block is starting to slow, so we'll be replanting that acre soon.</p>
       </div>
