--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -148,14 +148,14 @@ layout: "standard"
 			<p class="lh-copy measure mt2">Vineyard manager Raul Martinez was the first employee. He came on in 1987 to help Randy in the vineyards and he is still running the vineyard today.</p>
         <h3 class="normal mt4 mb0">Adan Salgado</h3>
         <p class="lh-copy measure mt2">Adan joined the crew in 2001 and has been an invaluable contributor ever since. He's the one to thank for the wax on the Howell Mountain bottles. It's not an easy job but Adan cranks them out at 100 cases per day!</p>
-        <h3 class="normal mt4 mb0">Marcos Olivera</h3>
-        <p class="lh-copy measure mt2">Brought on in 2005. Formerly he worked for the tunnel guys that dug our cave. Marcos is the backbone of the vineyard crew. Today he supervises the guys as Raul has many other duties to attend to.</p>
 		</div>
+
+    <!-- Col 2 -->
 		<div class="fl w-100 w-50-ns ph3-m ph4-l">
-        <h3 class="normal mt0  mb0">Rosalio Olivera</h3>
+        <h3 class="normal mt0 mb0">Marcos Olivera</h3>
+        <p class="lh-copy measure mt2">Brought on in 2005. Formerly he worked for the tunnel guys that dug our cave. Marcos is the backbone of the vineyard crew. Today he supervises the guys as Raul has many other duties to attend to.</p>
+        <h3 class="normal mt4  mb0">Rosalio Olivera</h3>
         <p class="lh-copy measure mt2">Rosalio came onboard in 2005 to help in the vineyard and has been a valuable member of the team ever since.</p>
-        <h3 class="normal mt4 mb0">Adriaan Foot</h3>
-        <p class="lh-copy measure mt2">Joining in 2014, Adriaan came over to help Mike in the cellar. He is a trained winemaker from South Africa and makes a small amount of Napa Valley and South African Chardonnay (<%= link_to "Hand of Fate", "http://www.handoffatewines.com", :class => "txt-link link dunn-link", :target => "_blank" %>) in conjunction with his Cabernet duties at the winery.</p>
         <h3 class="normal mt4 mb0">Fernando Olivera</h3>
         <p class="lh-copy measure mt2">Starting in 2015, he is the third member of this Olivera clan here in the vineyard. Fernando always has a smile on his face and laughs at all of Mike's jokes so he certainly has a successful future here.</p>
         <h3 class="normal mt4 mb0">Ben Hiza</h3>
