fixed copyright date, removed ga

--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -13,7 +13,7 @@
       <%= link_to 'Contact Us', 'contact', :class => 'di dunn-link link underline-hover' %>
     </div>
     
-    <p class="f6 mt5 black-40">&copy;<%= Time.now.year %> Dunn Vineyards</p>
+    <p class="f6 mt5 black-40">&copy;<script>document.write(new Date().getFullYear())</script> Dunn Vineyards</p>
   </div>
 </footer>
 
