--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -40,17 +40,35 @@ layout: "standard"
 
 	<!-- COL 2 -->
       <div class="fl w-100 w-50-ns ph3-m ph4-l">
-        <%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
+        <%= image_tag 'family/kara-dunn.jpg', :class => 'w-100' %>
+        <h3 class="normal mt3 mb0">Kara Pecota Dunn</h3>
+        <p class="lh-copy measure mb4 mb2-ns">Kara Pecota Dunn is a second generation Napa Valley vintner. As the daughter of Robert Pecota of Robert Pecota Winery in Calistoga and the wife of Michael Dunn of Dunn Vineyards on Howell Mountain, she has been involved in the wine industry since her childhood. After receiving her BA from UC Davis in International Relations in 1990, she worked her way up to the role of GM of Robert Pecota Winery and started <%= link_to 'Retro Cellars',  'http://www.retrocellars.com', :class=>'dunn-link link txt-link' %> in 2003 with her husband. She is the mother of two adult children, an avid tennis player, Mah Jongg enthusiast and loves being outside in nature.</p>
+	</div>
+</div>
+
+	<!-- ROW 3 -->
+    <div class="w-100 center cf mb0 mb4-ns">
+	<!-- COL 1 -->
+      <div class="fl w-100 w-50-ns ph3-m ph4-l">
+            <%= image_tag ' family/kristina-os.jpg', :class => 'w-100' %>
         <h3 class="normal mt3 mb0">Kristina Dunn-Buchanan</h3>
-        <p class="lh-copy measure mb4 mb2-ns">Marketer, mediator, and now mostly full-time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a B.S. in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.  
-    
+        <p class="lh-copy measure mb4 mb2-ns">Marketer, mediator, and now mostly full-time mother, Kristina is the youngest of the Dunn children. After graduating Cal Poly San Luis Obispo with a B.S. in Wine &amp; Viticulture, she returned to Howell Mountain to manage marketing, run hospitality, and resume her natural role as family mediator. These days she spends most of her time, along with her husband Brian, managing their two young daughters, but she's close by and ready to help out.</p>  
+ 
+      </div>
+
+	<!-- COL 2 -->
+      <div class="fl w-100 w-50-ns ph3-m ph4-l">
+      <%= image_tag 'family/jenny-portrait.jpg', :class => 'w-70 center db' %>
+      <h3 class="normal mt2-m mb0">Jennifer Dunn</h3>
+		  <p class="lh-copy measure">It is safe to say, that we are who we are today because of the love Jenny brought to our lives. The oldest Dunn daughter loved softball and riding horses with Dad. But while attending Chico State, she contracted bacterial meningitis and passed away. In part because of Jenny's case, most institutions of higher learning now require vaccination &mdash; a requirement that has saved many lives.  </p>
+      &nbsp;
 	</div>
 </div>
   
 
-	<!-- ROW 3 -->
+	<!-- ROW 4 -->
 
-
+<!-- 
     <div class="w-100 center cf mb4-ns">
       <div class="fl w-100 w-50-ns ph3-m ph4-l tc tr-ns">
         <%= image_tag ' family/jenny-portrait.jpg', :class => 'w-70' %>
@@ -62,6 +80,7 @@ layout: "standard"
 			</div>
 
     </div>
+-->
 
 </div>
  </section> 
@@ -70,7 +89,7 @@ layout: "standard"
 
 <section class="mw8 center ph4">
 	
-	<!-- CRAPBOOK ROW 70/30 --> 
+	<!-- SCRAPBOOK ROW 70/30 --> 
   <div class="w-100 cf mw9 center mb0 mb4-ns overflow-hidden scrapbook-height">
 
     <div class="fl w-100 w-70-ns pr3-ns pb3 pb0-ns"> 
