--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -12,28 +12,39 @@ hero: "contact/hero.jpg"
     -->
       <h2 class="normal mt0 tc tl-l"></h2>
    
-      <p class="lh-copy measure center">
+      <p class="center mb1">
         Join us the first Friday of every month at 2pm PST.
       </p>
-      <p class="">
+      <p class="i mt2">Zoom tastings limited to 12 households.</p>
+      <p class="mt4">
         <%= link_to 'Link to our Zoom Tasting Room', 'https://us02web.zoom.us/meeting/register/tZYqcuGvrDkqHtRonJcbHjIodnHXFD1iR1aP', :class => 'dunn-link link txt-link' %>
       </p>
+      
       <div class="mw6 mt5 tc center">
-      <h3 class="normal mb0 tc mt5">Friday, August 7th</h3>
+      <!-- <h3 class="normal mb0 tc mt5">Friday, August 7th</h3>
       <p class="lh-copy measure center mt3 mb0">2002 Dunn Howell Mountain Cabernet</p>
       <p class="lh-copy measure center mt0 mb0">2012 Dunn Howell Mountain Cabernet</p>
       <p class="lh-copy measure center mt0">2017 Retro Cellars Howell Mountain Syrah</p>
-
       <h3 class="normal mb0 tc mt5">Friday, September 4th</h3>
       <p class="lh-copy measure center mt3 mb0">2003 Dunn Howell Mountain Cabernet</p>
       <p class="lh-copy measure center mt0 mb0">2013 Dunn Howell Mountain Cabernet</p>
       <p class="lh-copy measure center mt0">2013 Retro Cellars Howell Mountain Petite Sirah</p>
-      
+     --> 
       <h3 class="normal mb0 tc mt5">Friday, October 2nd</h3>
-      <p class="lh-copy measure center mt3 mb0">1995 Dunn Howell Mountain Cabernet</p>
-      <p class="lh-copy measure center mt0 mb0">2005 Dunn Howell Mountain Cabernet</p>
-      <p class="lh-copy measure center mt0">2015 Retro Cellars Howell Mountain Peloursin</p> 
+      <p class="lh-copy measure center mt3 mb0">2003 Dunn Howell Mountain Cabernet</p>
+      <p class="lh-copy measure center mt0 mb0">2013 Dunn Howell Mountain Cabernet</p>
+    <!--  
+      <p class="lh-copy measure center mt0">2015 Retro Cellars Howell Mountain Peloursin</p> -->
     
+      <h3 class="normal mb0 tc mt5">Friday, November 6th</h3>
+      <p class="lh-copy measure center mt3 mb0">2005 Dunn Howell Mountain Cabernet</p>
+      <p class="lh-copy measure center mt0 mb0">2015 Dunn Howell Mountain Cabernet</p>
+      <!--<p class="lh-copy measure center mt0">2017 Retro Cellars Howell Mountain Syrah</p>-->
+      <h3 class="normal mb0 tc mt5">Friday, Decenber 4th</h3>
+      <p class="lh-copy measure center mt3 mb0">2006 Dunn Howell Mountain Cabernet</p>
+      <p class="lh-copy measure center mt0 mb0">2016 Dunn Howell Mountain Cabernet</p>
+      <!--<p class="lh-copy measure center mt0">2017 Retro Cellars Howell Mountain Syrah</p>-->
+      
       </div>
       </div>
  
