--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -49,6 +49,6 @@ hero: "contact/hero.jpg"
       </div>
  
   <div class="mt5">
-    <%= image_tag "contact/end.jpg" %>
+    <%= image_tag "contact/wine-cave.jpg" %>
   </div>
 </section>
