--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -145,9 +145,39 @@ layout: "standard"
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-rlm.jpg) left;"></div>
       </div>
     </div>
- 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns">
+ 		<div class="fl w-100 w-50-ns pr0-ns pl3-ns pb3 pb0-ns">
       <div class="aspect-ratio aspect-ratio--8x5">
       <div class="aspect-ratio--object cover" style="background: url(/images/family/fam-os.jpg) left;"> </div>
+      </div>
+    </div> 
+  </div>
+
+    <!-- SCRAPBOOK ROW 30/70 --> 
+
+  <div class="w-100 cf mw9 center mb0 mb4-ns overflow-hidden scrapbook-height">
+    <div class="fl w-100 w-30-ns ph5 pl0-ns pr3-ns pb3 pb0-ns">
+      <div class="aspect-ratio aspect-ratio--5x8">
+        <div class="aspect-ratio--object cover" style="background: url(/images/family/randy-cowboy.jpg) top center;"></div>
+      </div>
+    </div>
+    <div class="fl w-100 w-70-ns pr0-ns pl3-ns pb3 pb0-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/family/purple-hands.jpg) left;"> </div>
+      </div>
+    </div> 
+  </div>
+
+    <!-- SCRAPBOOK ROW 30/70 --> 
+
+  <div class="w-100 cf mw9 center mb0 mb4-ns overflow-hidden scrapbook-height">
+    <div class="fl w-100 w-70-ns ph5 pl0-ns pr3-ns pb3 pb0-ns">
+      <div class="aspect-ratio aspect-ratio--8x5">
+        <div class="aspect-ratio--object cover" style="background: url(/images/family/randy-kristina-lori.jpg) top center;"></div>
+      </div>
+    </div>
+    <div class="fl w-100 w-30-ns pr0-ns pl3-ns pb3 pb0-ns">
+      <div class="aspect-ratio aspect-ratio--5x8">
+        <div class="aspect-ratio--object cover" style="background: url(/images/family/mike-kristina.jpg) left;"> </div>
       </div>
     </div> 
   </div>
