updating tasting calendar

--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -13,7 +13,7 @@ hero: "contact/hero.jpg"
       <h2 class="normal mt0 tc tl-l"></h2>
    
       <p class="center mb1">
-        Join us the first Friday of every month at 2pm PST.
+        Join us the first Friday of every month at 4pm PST.
       </p>
       <p class="i mt2">Zoom tastings limited to 12 households.</p>
       <p class="mt4">
@@ -30,15 +30,15 @@ hero: "contact/hero.jpg"
       <p class="lh-copy measure center mt0 mb0">2013 Dunn Howell Mountain Cabernet</p>
       <p class="lh-copy measure center mt0">2013 Retro Cellars Howell Mountain Petite Sirah</p>
      --> 
-      <h3 class="normal mb0 tc mt5">Friday, October 2nd</h3>
+      <!-- <h3 class="normal mb0 tc mt5">Friday, October 2nd</h3>
       <p class="lh-copy measure center mt3 mb0">2003 Dunn Howell Mountain Cabernet</p>
-      <p class="lh-copy measure center mt0 mb0">2013 Dunn Howell Mountain Cabernet</p>
+      <p class="lh-copy measure center mt0 mb0">2013 Dunn Howell Mountain Cabernet</p> -->
     <!--  
       <p class="lh-copy measure center mt0">2015 Retro Cellars Howell Mountain Peloursin</p> -->
-    
+<!--     
       <h3 class="normal mb0 tc mt5">Friday, November 6th</h3>
       <p class="lh-copy measure center mt3 mb0">2005 Dunn Howell Mountain Cabernet</p>
-      <p class="lh-copy measure center mt0 mb0">2015 Dunn Howell Mountain Cabernet</p>
+      <p class="lh-copy measure center mt0 mb0">2015 Dunn Howell Mountain Cabernet</p> -->
       <!--<p class="lh-copy measure center mt0">2017 Retro Cellars Howell Mountain Syrah</p>-->
       <h3 class="normal mb0 tc mt5">Friday, December 4th</h3>
       <p class="lh-copy measure center mt3 mb0">2006 Dunn Howell Mountain Cabernet</p>
