--- a/source/calendar.html.erb
+++ b/source/calendar.html.erb
@@ -19,7 +19,7 @@ hero: "contact/hero.jpg"
       <p class="mt4">
         <%= link_to 'Link to our Zoom Tasting Room', 'https://us02web.zoom.us/meeting/register/tZYqcuGvrDkqHtRonJcbHjIodnHXFD1iR1aP', :class => 'dunn-link link txt-link' %>
       </p>
-      
+
       <div class="mw6 mt5 tc center">
       <!-- <h3 class="normal mb0 tc mt5">Friday, August 7th</h3>
       <p class="lh-copy measure center mt3 mb0">2002 Dunn Howell Mountain Cabernet</p>
@@ -44,7 +44,7 @@ hero: "contact/hero.jpg"
       <p class="lh-copy measure center mt3 mb0">2012 Dunn Napa Valley Cabernet</p>
       <p class="lh-copy measure center mt1 mb0">2013 Dunn Napa Valley Cabernet</p>
       <p class="lh-copy measure center mt1 mb0">2014 Dunn Napa Valley Cabernet</p>
-      <p class="lh-copy measure center mt3 mb0 i">Wines available for purchase from the winery for registered participants.</p> 
+      <p class="lh-copy measure center mt3 mb0 i">Wines available for purchase from the winery for<br> <a class="dunn-link link txt-link" href="https://us02web.zoom.us/meeting/register/tZUqce6orD4oHNAPY0EneQSofyRk6fUAnHTs">registered participants</a>.</p> 
       </div>
       </div>
  
